# WebStreamDeck

./: .gitignore  CMakeLists.txt  Git提交规范指南.md  LICENSE  WebStreamDeck.rc  build.bat  mermaid.md  readme.md  vcpkg-configuration.json  vcpkg.json
assets/lang/: en.json  zh.json
assets/presetconfig/: config2p_2_5.json  config3p.json  config_.json  config_1p3_5.json  config_2p_3_3.json  宫商角徵羽.json
assets/sounds/: audiogen.py
src/: ActionExecutor.cpp  ActionExecutor.hpp  Application.cpp  Application.hpp  CommServer.cpp  CommServer.hpp  ConfigManager.cpp  ConfigManager.hpp  GifLoader.hpp  InputUtils.cpp  InputUtils.hpp  TranslationManager.cpp  TranslationManager.hpp  UIManager.cpp  UIManager.hpp  main.cpp
src/Constants/: NetworkConstants.hpp
src/Managers/: ActionRequestManager.cpp  ActionRequestManager.hpp  ConfigManager.cpp  ConfigManager.hpp  NetworkManager.cpp  NetworkManager.hpp  TranslationManager.cpp  TranslationManager.hpp  UIManager.cpp  UIManager.hpp
src/Services/: ActionExecutionService.cpp  ActionExecutionService.hpp  HttpServer.cpp  HttpServer.hpp  SoundPlaybackService.cpp  SoundPlaybackService.hpp  WebSocketServer.cpp  WebSocketServer.hpp
src/UIWindows/: UIAboutWindow.cpp  UIAboutWindow.hpp  UIButtonGridWindow.cpp  UIButtonGridWindow.hpp  UIConfigurationWindow.cpp  UIConfigurationWindow.hpp  UILayoutSettingsWindow.cpp  UILayoutSettingsWindow.hpp  UIQrCodeWindow.cpp  UIQrCodeWindow.hpp  UIStatusLogWindow.cpp  UIStatusLogWindow.hpp
src/UIWindows/Components/: ButtonEditComponent.cpp  ButtonEditComponent.hpp  ButtonListComponent.cpp  ButtonListComponent.hpp  ButtonSelectorPopupComponent.cpp  ButtonSelectorPopupComponent.hpp  GridCellComponent.cpp  GridCellComponent.hpp  GridPaginationComponent.cpp  GridPaginationComponent.hpp  PresetManagerComponent.cpp  PresetManagerComponent.hpp
src/Utils/: GifLoader.cpp  IconUtils.cpp  IconUtils.hpp  InputUtils.hpp  NetworkUtils.cpp  NetworkUtils.hpp  StringUtils.cpp  StringUtils.hpp  TextureLoader.cpp  TextureLoader.hpp
web/: index.html  script.js  style.css
web/css/: main.css
web/css/components/: button.css  header.css  pagination.css
web/js/: config.js  main.js  ui.js  websocket.js
